Mon Jun 21 17:43:27 1999  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: fixed a bug with merging two subtrees of nodes
	defined in two separate MIB files (reported by Jochen Friedrich).

1999-06-17  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed incorrect base types of SNMPv2-SMI
	application types.

1999-06-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.1.5.tar.gz: released version 0.1.5.

	* tools/dump-java.c: started a new dump format that represents
	java classes for MIB tables. This is experimental and may be
	removed from smidump in future revisions.

	* lib/data.c: more changes to internal data structure to make
	them language independant, especially hiding all occurances
	of the SMIng namespace operator `::'.

	* data.c: cleaned up libsmi base types to be less language
	dependant.

	* lib/smi.h: add API function smiGetNodeByOID() to retrieve
	an SmiNode based on an OID given by an integer array.

	* lib/smi.c: smiGetNode() now returns the node with the longest
	common OID prefix, if its argument is given by OID.
	
1999-06-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.h: added SmiLanguage and an appropriate element to the
	SmiModule struct to represent the language that has been used to
	read a MIB module.

1999-06-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.h: Hiding knowledge on the underlying language from
	the API: SmiNode contains a new element `nodekind' that represents
	the kind of any node in the tree independant from the actual
	language statement. Hence, most application no longer need to
	use SmiDecl. smiquery and smidump are adapted accordingly.

1999-06-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c: implemented smiGetFirstChild() and smiGetNextChild().

	* lib/smi.h: OIDs are now represented by a more efficient array
	of integers instead of a string.

1999-06-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* test/parser.test.in: started to write a set of MIB modules