@@ -8,10 +8,12 @@
 # See the file "COPYING" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# @(#) $Id$
+# @(#) $Id: Makefile.am,v 1.1 1999/06/10 17:57:00 strauss Exp $
 #
 
 EXTRA_DIST		= LIBSMI-TEST-MIB \
 			  LIBSMI-TEST-001-MIB LIBSMI-TEST-002-MIB \
-			  LIBSMI-TEST-003-MIB LIBSMI-TEST-004-MIB
+			  LIBSMI-TEST-003-MIB LIBSMI-TEST-004-MIB \
+			  LIBSMI-TEST-005-MIB LIBSMI-TEST-006-MIB \
+			  LIBSMI-TEST-007-MIB
 
